# yrja-analytics

./: .env  .env.example  .gitignore  README.md  _diag_notion.py  agent.md  app.py  gordon_client.py  gordon_exporter.py  gordon_oneoff_20260526.py  hanen_producers_kjottprodusenter.csv  hanen_producers_kjottprodusenter.json  hanen_scraper.py  notion_sync.py  optimize_weights.py  products.py  pyproject.toml  requirements.txt  sales_breakdown_20260629.csv  sales_breakdown_20260630.csv  sales_report_oneoff_20260629.py  scratch.json  shopify_client.py  shopify_oauth.py  shopify_order_models.py  shopify_order_queries.py  shopify_orders.py  simulator.py  skio_client.py  skio_orders_to_gordon.py  sync_slots.py
delivery_zones/: delivery_zones.ipynb
delivery_zones/data/: GCF NO.xlsx
delivery_zones/output/: delivery_zones.json
fulfillment/: __init__.py  client.py  exporter.py  models.py  pdf.py  queries.py
