[project]
name = "box-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "highspy>=1.13.1",
    "ipykernel>=7.2.0",
    "notion-client>=2.0.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyomo>=6.10.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
]
